--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -14,6 +14,10 @@
 }
 
 /* Global Styles */
+*{
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 body {
   background-color: #000;
   color: white;
